--- a/styles/main.css
+++ b/styles/main.css
@@ -1,21 +1,23 @@
+
+
 @font-face {
-  font-family: 'Inter var';
+  font-family: 'AtkinHyp';
   font-style: normal;
   font-weight: 100 900;
   font-display: block;
-  src: url(/fonts/Inter-roman.latin.var.woff2) format('woff2');
+  src: url(/fonts/AtkinsonHyperlegible-Regular.ttf) format('truetype');
 }
 @font-face {
-  font-family: 'Inter var';
+  font-family: 'AtkinHyp';
   font-style: italic;
   font-weight: 100 900;
   font-display: block;
-  src: url(/fonts/Inter-italic.latin.var.woff2) format('woff2');
+  src: url(/fonts/AtkinsonHyperlegible-Italic.ttf) format('truetype');
   font-named-instance: 'Italic';
 }
 
 body {
-  font-family: 'Inter var', system-ui, -apple-system, BlinkMacSystemFont,
+  font-family: 'AtkinHyp', system-ui, -apple-system, BlinkMacSystemFont,
     'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
   -webkit-font-smoothing: subpixel-antialiased;
