--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-/* @font-face {
+@font-face {
   font-family: 'AtkinHyp';
   font-style: normal;
   font-weight: 100 900;
@@ -12,7 +12,7 @@
   font-display: block;
   src: url(/fonts/AtkinsonHyperlegible-Italic.ttf) format('truetype');
   font-named-instance: 'Italic';
-} */
+}
 
 body {
   font-family: 'AtkinHyp', system-ui, -apple-system, BlinkMacSystemFont,
